--- a/index.html
+++ b/index.html
@@ -34,12 +34,19 @@
 
         <ul class="header-contacts list">
           <li class="item">
-            <a href="mailto:http//:info@devstudio.com" class="link envelope">
+            <a href="mailto:http//:info@devstudio.com" class="link">
+              <svg width="16" height="12" class="header-icon">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg width="10" height="16" class="header-icon">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </nav>
@@ -55,28 +62,48 @@
         <div class="container">
           <h2 class="notitle">Преимущество</h2>
           <ul class="list">
-            <li class="item antenna">
+            <li class="item">
+              <div class="icon">
+                <svg width="70" height="70" class="icon-antenna">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item clock">
+            <li class="item">
+              <div class="icon">
+                <svg width="70" height="70" class="icon-clock">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item diagram">
+            <li class="item">
+              <div class="icon">
+                <svg width="70" height="70" class="icon-diagram">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item astronaut">
+            <li class="item">
+              <div class="icon">
+                <svg width="70" height="70" class="icon-astronaut">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -117,6 +144,26 @@
               />
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p lang="en" class="team-function">Product Designer</p>
+              <div class="social">
+                <a href="http://" class="icon-social instagram">
+                  <svg width="20" height="20" class="icon-instagram">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="http://" class="icon-social twitter">
+                  <svg width="20" height="20" class="icon-twitter">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="http://" class="icon-social facebook">
+                  <svg width="20" height="20" class="icon-facebook">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+                <a href="http://" class="icon-social linkedin">
+                  <svg width="20" height="20" class="icon-linkedin">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
+              </div>
             </li>
             <li class="item">
               <img
@@ -127,6 +174,26 @@
               />
               <h3 class="team-name">Ольга Репина</h3>
               <p lang="en" class="team-function">Frontend Developer</p>
+              <div class="social">
+                <a href="http://" class="icon-social instagram">
+                  <svg width="20" height="20" class="icon-instagram">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="http://" class="icon-social twitter">
+                  <svg width="20" height="20" class="icon-twitter">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="http://" class="icon-social facebook">
+                  <svg width="20" height="20" class="icon-facebook">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+                <a href="http://" class="icon-social linkedin">
+                  <svg width="20" height="20" class="icon-linkedin">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
+              </div>
             </li>
             <li class="item">
               <img
@@ -137,6 +204,26 @@
               />
               <h3 class="team-name">Николай Тарасов</h3>
               <p lang="en" class="team-function">Marketing</p>
+              <div class="social">
+                <a href="http://" class="icon-social instagram">
+                  <svg width="20" height="20" class="icon-instagram">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="http://" class="icon-social twitter">
+                  <svg width="20" height="20" class="icon-twitter">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="http://" class="icon-social facebook">
+                  <svg width="20" height="20" class="icon-facebook">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+                <a href="http://" class="icon-social linkedin">
+                  <svg width="20" height="20" class="icon-linkedin">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
+              </div>
             </li>
             <li class="item">
               <img
@@ -147,6 +234,64 @@
               />
               <h3 class="team-name">Михаил Ермаков</h3>
               <p lang="en" class="team-function">UI Designer</p>
+              <div class="social">
+                <a href="http://" class="icon-social instagram">
+                  <svg width="20" height="20" class="icon-instagram">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="http://" class="icon-social twitter">
+                  <svg width="20" height="20" class="icon-twitter">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="http://" class="icon-social facebook">
+                  <svg width="20" height="20" class="icon-facebook">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+                <a href="http://" class="icon-social linkedin">
+                  <svg width="20" height="20" class="icon-linkedin">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Постоянные клиенты-->
+      <section class="section clients">
+        <div class="container">
+          <h2 class="title">Постоянные клиенты</h2>
+          <ul class="client list">
+            <li class="client-icon">
+              <svg width="106" height="60" class="icon-logo1">
+                <use href="./images/icons.svg#icon-Logo1"></use>
+              </svg>
+            </li>
+            <li class="client-icon">
+              <svg width="106" height="60" class="icon-logo2">
+                <use href="./images/icons.svg#icon-Logo2"></use>
+              </svg>
+            </li>
+            <li class="client-icon">
+              <svg width="106" height="60" class="icon-logo3">
+                <use href="./images/icons.svg#icon-Logo3"></use>
+              </svg>
+            </li>
+            <li class="client-icon">
+              <svg width="106" height="60" class="icon-logo4">
+                <use href="./images/icons.svg#icon-Logo4"></use>
+              </svg>
+            </li>
+            <li class="client-icon">
+              <svg width="106" height="60" class="icon-logo5">
+                <use href="./images/icons.svg#icon-Logo5"></use>
+              </svg>
+            </li>
+            <li class="client-icon">
+              <svg width="106" height="60" class="icon-logo6">
+                <use href="./images/icons.svg#icon-Logo6"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -155,22 +300,55 @@
     <!--Футер-->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo">
-          <span class="logo-text">Web</span>Studio</a
-        >
-        <address class="address">
-          г. Киев, пр-т Леси Украинки, 26
-          <ul class="list">
-            <li class="item">
-              <a href="mailto:info@example.com" class="link"
-                >info@example.com</a
-              >
+        <div class="footer-address">
+          <a href="./index.html" class="logo">
+            <span class="logo-text">Web</span>Studio</a
+          >
+          <address class="address">
+            г. Киев, пр-т Леси Украинки, 26
+            <ul class="list">
+              <li class="item">
+                <a href="mailto:info@example.com" class="link"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="title">присоединяйтесь</h2>
+          <ul class="footer-scl list">
+            <li>
+              <a href="http://" class="icon-social instagram">
+                <svg width="20" height="20" class="icon-instagram">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+            <li>
+              <a href="http://" class="icon-social twitter">
+                <svg width="20" height="20" class="icon-twitter">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="http://" class="icon-social facebook">
+                <svg width="20" height="20" class="icon-facebook">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="http://" class="icon-social linkedin">
+                <svg width="20" height="20" class="icon-linkedin">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
