--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,19 @@
 
         <ul class="header-contacts list">
           <li class="item">
-            <a href="mailto:http//:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:http//:info@devstudio.com" class="link">
+              <svg width="16" height="12" class="header-icon">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg width="10" height="16" class="header-icon">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </nav>
@@ -188,22 +195,55 @@
     <!--Футер-->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo">
-          <span class="logo-text">Web</span>Studio</a
-        >
-        <address class="address">
-          г. Киев, пр-т Леси Украинки, 26
-          <ul class="list">
-            <li class="item">
-              <a href="mailto:info@example.com" class="link"
-                >info@example.com</a
-              >
+        <div class="footer-address">
+          <a href="./index.html" class="logo">
+            <span class="logo-text">Web</span>Studio</a
+          >
+          <address class="address">
+            г. Киев, пр-т Леси Украинки, 26
+            <ul class="list">
+              <li class="item">
+                <a href="mailto:info@example.com" class="link"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="title">присоединяйтесь</h2>
+          <ul class="footer-scl list">
+            <li>
+              <a href="http://" class="icon-social instagram">
+                <svg width="20" height="20" class="icon-instagram">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+            <li>
+              <a href="http://" class="icon-social twitter">
+                <svg width="20" height="20" class="icon-twitter">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="http://" class="icon-social facebook">
+                <svg width="20" height="20" class="icon-facebook">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="http://" class="icon-social linkedin">
+                <svg width="20" height="20" class="icon-linkedin">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
