--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
   <body>
     <!--Шапка сайта-->
     <header class="header">
-      <nav class="container nav">
-        <a href="./index.html" class="logo"
-          ><span class="logo-text">Web</span>Studio</a
-        >
-        <ul class="site-nav list">
-          <li class="item">
-            <a href="./index.html" class="link current">Студия</a>
-          </li>
-          <li class="item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
-          </li>
-          <li class="item"><a href="/" class="link">Контакты</a></li>
-        </ul>
-
+      <div class="container">
+        <nav class="nav">
+          <a href="./index.html" class="logo"
+            ><span class="logo-text">Web</span>Studio</a
+          >
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="/" class="link">Контакты</a></li>
+          </ul>
+        </nav>
         <ul class="header-contacts list">
           <li class="item">
             <a href="mailto:http//:info@devstudio.com" class="link">
@@ -49,13 +50,13 @@
             >
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
     <main>
       <!--герой-->
       <section class="section hero">
         <h1 class="title">Эффективные решения <br />для вашего бизнеса</h1>
-        <a href="./index.html" class="button">Заказать услугу</a>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
       <!--Особенности-->
       <section class="section advantage">
@@ -142,27 +143,29 @@
                 width="270"
                 class="photo"
               />
-              <h3 class="team-name">Игорь Демьяненко</h3>
-              <p lang="en" class="team-function">Product Designer</p>
-              <div class="social">
-                <a href="http://" class="icon-social instagram">
-                  <svg width="20" height="20" class="icon-instagram">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="http://" class="icon-social twitter">
-                  <svg width="20" height="20" class="icon-twitter">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="http://" class="icon-social facebook">
-                  <svg width="20" height="20" class="icon-facebook">
-                    <use href="./images/icons.svg#icon-facebook"></use></svg
-                ></a>
-                <a href="http://" class="icon-social linkedin">
-                  <svg width="20" height="20" class="icon-linkedin">
-                    <use href="./images/icons.svg#icon-linkedin"></use></svg
-                ></a>
+              <div class="team-badge">
+                <h3 class="team-name">Игорь Демьяненко</h3>
+                <p lang="en" class="team-function">Product Designer</p>
+                <div class="social">
+                  <a href="http://" class="icon-social instagram">
+                    <svg width="20" height="20" class="icon-instagram">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="http://" class="icon-social twitter">
+                    <svg width="20" height="20" class="icon-twitter">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="http://" class="icon-social facebook">
+                    <svg width="20" height="20" class="icon-facebook">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                  <a href="http://" class="icon-social linkedin">
+                    <svg width="20" height="20" class="icon-linkedin">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -172,27 +175,29 @@
                 width="270"
                 class="photo"
               />
-              <h3 class="team-name">Ольга Репина</h3>
-              <p lang="en" class="team-function">Frontend Developer</p>
-              <div class="social">
-                <a href="http://" class="icon-social instagram">
-                  <svg width="20" height="20" class="icon-instagram">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="http://" class="icon-social twitter">
-                  <svg width="20" height="20" class="icon-twitter">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="http://" class="icon-social facebook">
-                  <svg width="20" height="20" class="icon-facebook">
-                    <use href="./images/icons.svg#icon-facebook"></use></svg
-                ></a>
-                <a href="http://" class="icon-social linkedin">
-                  <svg width="20" height="20" class="icon-linkedin">
-                    <use href="./images/icons.svg#icon-linkedin"></use></svg
-                ></a>
+              <div class="team-badge">
+                <h3 class="team-name">Ольга Репина</h3>
+                <p lang="en" class="team-function">Frontend Developer</p>
+                <div class="social">
+                  <a href="http://" class="icon-social instagram">
+                    <svg width="20" height="20" class="icon-instagram">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="http://" class="icon-social twitter">
+                    <svg width="20" height="20" class="icon-twitter">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="http://" class="icon-social facebook">
+                    <svg width="20" height="20" class="icon-facebook">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                  <a href="http://" class="icon-social linkedin">
+                    <svg width="20" height="20" class="icon-linkedin">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -202,27 +207,29 @@
                 width="270"
                 class="photo"
               />
-              <h3 class="team-name">Николай Тарасов</h3>
-              <p lang="en" class="team-function">Marketing</p>
-              <div class="social">
-                <a href="http://" class="icon-social instagram">
-                  <svg width="20" height="20" class="icon-instagram">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="http://" class="icon-social twitter">
-                  <svg width="20" height="20" class="icon-twitter">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="http://" class="icon-social facebook">
-                  <svg width="20" height="20" class="icon-facebook">
-                    <use href="./images/icons.svg#icon-facebook"></use></svg
-                ></a>
-                <a href="http://" class="icon-social linkedin">
-                  <svg width="20" height="20" class="icon-linkedin">
-                    <use href="./images/icons.svg#icon-linkedin"></use></svg
-                ></a>
+              <div class="team-badge">
+                <h3 class="team-name">Николай Тарасов</h3>
+                <p lang="en" class="team-function">Marketing</p>
+                <div class="social">
+                  <a href="http://" class="icon-social instagram">
+                    <svg width="20" height="20" class="icon-instagram">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="http://" class="icon-social twitter">
+                    <svg width="20" height="20" class="icon-twitter">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="http://" class="icon-social facebook">
+                    <svg width="20" height="20" class="icon-facebook">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                  <a href="http://" class="icon-social linkedin">
+                    <svg width="20" height="20" class="icon-linkedin">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -232,27 +239,29 @@
                 width="270"
                 class="photo"
               />
-              <h3 class="team-name">Михаил Ермаков</h3>
-              <p lang="en" class="team-function">UI Designer</p>
-              <div class="social">
-                <a href="http://" class="icon-social instagram">
-                  <svg width="20" height="20" class="icon-instagram">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="http://" class="icon-social twitter">
-                  <svg width="20" height="20" class="icon-twitter">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="http://" class="icon-social facebook">
-                  <svg width="20" height="20" class="icon-facebook">
-                    <use href="./images/icons.svg#icon-facebook"></use></svg
-                ></a>
-                <a href="http://" class="icon-social linkedin">
-                  <svg width="20" height="20" class="icon-linkedin">
-                    <use href="./images/icons.svg#icon-linkedin"></use></svg
-                ></a>
+              <div class="team-badge">
+                <h3 class="team-name">Михаил Ермаков</h3>
+                <p lang="en" class="team-function">UI Designer</p>
+                <div class="social">
+                  <a href="http://" class="icon-social instagram">
+                    <svg width="20" height="20" class="icon-instagram">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="http://" class="icon-social twitter">
+                    <svg width="20" height="20" class="icon-twitter">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="http://" class="icon-social facebook">
+                    <svg width="20" height="20" class="icon-facebook">
+                      <use href="./images/icons.svg#icon-facebook"></use></svg
+                  ></a>
+                  <a href="http://" class="icon-social linkedin">
+                    <svg width="20" height="20" class="icon-linkedin">
+                      <use href="./images/icons.svg#icon-linkedin"></use></svg
+                  ></a>
+                </div>
               </div>
             </li>
           </ul>
@@ -306,7 +315,7 @@
           >
           <address class="address">
             г. Киев, пр-т Леси Украинки, 26
-            <ul class="list">
+            <ul class="ftr-list list">
               <li class="item">
                 <a href="mailto:info@example.com" class="link"
                   >info@example.com</a
