--- a/portfolio.html
+++ b/portfolio.html
@@ -70,11 +70,9 @@
               <button type="button" class="btn">Маркетинг</button>
             </li>
           </ul>
-        </div>
 
-        <!--Выполненые работы-->
+          <!--Выполненые работы-->
 
-        <div class="container">
           <ul class="content list">
             <li class="item">
               <a href="" class="content-link">
@@ -84,9 +82,11 @@
                   width="370"
                   class="pic"
                 />
-                <h2 class="title">Технокряк</h2>
-                <p class="text">Веб-сайт</p></a
-              >
+                <div class="content-name">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="content-link">
@@ -96,11 +96,13 @@
                   width="370"
                   class="pic"
                 />
-                <h2 class="title">
-                  Постер <span lang="en">Orlean vs Golden Star</span>
-                </h2>
-                <p class="text">Дизайн</p></a
-              >
+                <div class="content-name">
+                  <h2 class="title">
+                    Постер <span lang="en">Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="content-link">
@@ -110,9 +112,11 @@
                   width="370"
                   class="pic"
                 />
-                <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-                <p class="text">Приложение</p></a
-              >
+                <div class="content-name">
+                  <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="content-link">
@@ -122,9 +126,11 @@
                   width="370"
                   class="pic"
                 />
-                <h2 class="title">Проект <span lang="en">Prime</span></h2>
-                <p class="text">Маркетинг</p></a
-              >
+                <div class="content-name">
+                  <h2 class="title">Проект <span lang="en">Prime</span></h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="content-link">
@@ -134,9 +140,11 @@
                   width="370"
                   class="pic"
                 />
-                <h2 class="title">Проект <span lang="en">Boxes</span></h2>
-                <p class="text">Приложение</p></a
-              >
+                <div class="content-name">
+                  <h2 class="title">Проект <span lang="en">Boxes</span></h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="content-link">
@@ -146,9 +154,11 @@
                   width="370"
                   class="pic"
                 />
-                <h2 lang="en" class="title">Inspiration has no Borders</h2>
-                <p class="text">Веб-сайт</p></a
-              >
+                <div class="content-name">
+                  <h2 lang="en" class="title">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="content-link">
@@ -158,11 +168,13 @@
                   width="370"
                   class="pic"
                 />
-                <h2 class="title">
-                  Издание <span lang="en"> Limited Edition</span>
-                </h2>
-                <p class="text">Дизайн</p></a
-              >
+                <div class="content-name">
+                  <h2 class="title">
+                    Издание <span lang="en"> Limited Edition</span>
+                  </h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="content-link">
@@ -172,9 +184,11 @@
                   width="370"
                   class="pic"
                 />
-                <h2 class="title">Проект <span lang="en">LAB</span></h2>
-                <p class="text">Маркетинг</p></a
-              >
+                <div class="content-name">
+                  <h2 class="title">Проект <span lang="en">LAB</span></h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="content-link">
@@ -184,9 +198,11 @@
                   width="370"
                   class="pic"
                 />
-                <h2 lang="en" class="title">Growing Business</h2>
-                <p class="text">Приложение</p></a
-              >
+                <div class="content-name">
+                  <h2 lang="en" class="title">Growing Business</h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -201,7 +217,7 @@
           >
           <address class="address">
             г. Киев, пр-т Леси Украинки, 26
-            <ul class="list">
+            <ul class="ftr-list list">
               <li class="item">
                 <a href="mailto:info@example.com" class="link"
                   >info@example.com</a
